test/tests/errors/error-class-cannot-access-private2.sm
// true
// false
// false
/**/
/**/

program {
    class U {
        private var y: int = 1;
    }

    class T {
        private var u: U = new U();

        public proc x() {
            output this.u.y;
        }
    }
}